<resources>
    <string name="app_name">График смени</string>
    <string name="tab_text_1">Общи</string>
    <string name="tab_text_2">График</string>
    <string name="tab_text_3">Бележки</string>
    <string name="tab_text_4">Извънредни</string>
    <string name="tab_text_5">Настройки</string>
    <string name="tab_text_7">АДМИН</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hours">Часове</string>
    <string name="days">Дни</string>
    <string name="username">Потребител</string>
    <string name="btnUpdate">Инсталирай нова версия</string>

    <!-- Login form  -->
    <string name="register">Регистрация</string>
    <string name="labelFName">Име</string>
    <string name="labelSName">Презиме</string>
    <string name="labelUName">Портебител</string>

    <!-- Belejki layout  -->
    <string name="btnNewDocument">Добави бележка</string>
    <string name="btnFindDocument">Намери бележка</string>
    <string name="btnListDocument">Покажи всички мои бележки</string>
    <string name="btnDocumentEnter">Режим отразяване</string>
    <string name="btnDelDocument">Изтриване на бележка</string>
    <string name="documents">Бележки</string>
    <string name="default_notification_channel_id">my_app_channel</string>
    <string name="fcm_message">Внимание</string>
    <string name="fcm_message_notification">Ново известие.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_welcome">Welcome</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>



    <string name="txtHomeGuide"></string>
    <string name="welcome_text">С този съветник ще ти обясня на кратко какво означават иконите в приложението.</string>
    <string name="stepTwoHeader">Тук са описани иконите и значенията им.</string>
    <string name="icon_home_info_total">Тук е показан общия брой бележки до които си отразил за съответния месец</string>
    <string name="home_icon_info_checked">Тук е показан броя на отразените ти бележки за този месец</string>
    <string name="home_icon_info_unchecked">Тук е показан броя на бележките които НЕ се отразил за този месец</string>
    <string name="home_icon_info_extraDays_info">Тук са сумирани всички твои извънредни дни</string>
    <string name="home_icon_info_extraHours">Тук са сумирани всички твои извънредни часове</string>
    <string name="home_icon_info_warning">Тази икона се показва заедно със съобщение което е изпратено от Администратор и не може да бъде премахнато</string>
    <string name="home_icon_info_accountRank">Тук е показан вида на твоя потребителски профил</string>
    <string name="home_icon_info_request_notification">Тази икона се показва ако имаш чакаща заявка за размяна на дата. Може да се премахне като приемеш/откажеш заявката в раздел График</string>
    <string name="agreement">Ако си прочел всичко можеш да превключиш бутона "Разбирам" след което бутона напред</string>

    <!-- CALENDAR -->

</resources>