<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    android:layout_height="match_parent"
    tools:context=".fragment_step_two">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/btnStepOneOk"
        android:scrollbars="vertical"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/stepTwoHeader"
                    android:layout_marginVertical="25dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:id="@+id/iconOne"
                    android:background="@drawable/home_total_documents"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconOne"
                    android:text="@string/icon_home_info_total"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/iconTwo"
                    android:background="@drawable/home_checked_documents"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconTwo"
                    android:text="@string/home_icon_info_checked"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/iconTree"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_unchecked_documents"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconTree"
                    android:text="@string/home_icon_info_unchecked"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/iconFour"
                    android:background="@drawable/home_extra_days"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconFour"
                    android:text="@string/home_icon_info_extraDays_info"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_marginVertical="15dp"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/iconFive"
                    android:layout_centerVertical="true"
                    android:background="@drawable/home_extra_hours"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconFive"
                    android:layout_marginVertical="15dp"
                    android:text="@string/home_icon_info_extraHours"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/iconSix"
                    android:background="@drawable/home_warning"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconSix"
                    android:text="@string/home_icon_info_warning"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/iconSeven"
                    android:background="@drawable/home_user_rank"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconSeven"
                    android:text="@string/home_icon_info_accountRank"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/iconEight"
                    android:background="@drawable/notification_icon"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@id/iconEight"
                    android:text="@string/home_icon_info_request_notification"
                    android:textSize="15sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardBackgroundColor="@color/darker"
            app:cardMaxElevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/agreement"
                android:layout_marginVertical="25dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"/>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.SwitchCompat
        android:background="@color/darker"
        android:textColor="@color/text_color"
        android:layout_margin="10dp"
        android:paddingHorizontal="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Разбирам"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/btnStepOneOk"/>

</RelativeLayout>